# scylla-rust-wrapper

./: Cargo.toml
src/: config.rs  generic_client.rs  lib.rs  scylla_client.rs  stress_test.rs
tests/: config.rs  crud.rs  pool.rs  readme.MD  scylla_manager.rs
