[package]
name = "deadpool_scylla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = "0.10.0"
scylla = "0.12.0"
cdrs-tokio = "8.1.2"
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
