[package]
name = "deadpool_scylla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool = "0.10.0"
scylla = { version = "0.12.0", features = ["ssl"] }
cdrs-tokio = "8.1.2"
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
futures = "0.3.30"
uuid = "1.7.0"
log = "0.4"
env_logger = "0.9"
rand_chacha = "0.3.1"
openssl = "0.10.64"

[lib]
path = "src/lib.rs"

[[bin]]
name = "stress_test"
path = "src/stress_test.rs"
